--- a/style.css
+++ b/style.css
@@ -15,6 +15,8 @@
 
 }
 body {
+    margin: 0;
+    padding: 0;
     background: url('images/papyrus-dark.png');
     font-family: 'droid_sansregular', sans-serif;;
 }
