--- a/style.scss
+++ b/style.scss
@@ -85,8 +85,15 @@ nav {
             }
         }
     }
-    img {
-        margin-left: 1rem;
+    .prof-card {
+        border-radius: 1rem;
+        width: 25rem;
+        transform: translateY(-5rem);
+        box-shadow: 0px 154px 121px rgba(0, 117, 255, 0.07),
+            0px 24.7279px 19.4291px rgba(0, 117, 255, 0.0377964),
+            0px 14.8996px 11.7069px rgba(0, 117, 255, 0.0322036),
+            0px 8.29709px 6.51914px rgba(0, 117, 255, 0.0261253),
+            0px 3.56852px 2.80384px rgba(0, 117, 255, 0.0180827);
     }
 }
 
@@ -179,14 +186,15 @@ nav {
 
     .faced {
         display: flex;
+        flex-direction: column-reverse;
         align-items: center;
-        justify-content: center;
+        justify-content: flex-end;
         height: 89vh;
         text-align: center;
         .greeting {
             font-weight: 900;
-            font-size: 3.5rem;
-            transform: translateY(-5rem);
+            font-size: 3rem;
+            transform: translateY(0rem);
             position: relative;
             .unimp {
                 display: block;
@@ -201,8 +209,11 @@ nav {
                 transform: translateX(-50%);
             }
         }
-        img {
-            display: none;
+        .prof-card {
+            width: 12rem;
+            margin-bottom: 2rem;
+            margin-top: 1rem;
+            transform: translateY(0rem);
         }
     }
 
